<resources>
    <string name="app_name">Enigma Bridge</string>
    <string name="button_test_connection">Test Connection</string>
    <string name="title_settings">Settings</string>
    <string name="button_settings">Settings</string>
    <string name="button_receiver_settings">Receiver Settings</string>
    <string name="view_scheduled_timers">Scheduled Timers</string>
    <string name="toast_receiver_ip_missing">Receiver IP missing</string>
    <string name="toast_connection_test_successful">Connection successful</string>
    <string name="toast_connection_test_failed">Connection failed</string>
    <string name="status_enigma_connected">Connection successful</string>
    <string name="status_enigma_disconnected">Connection failed</string>
    <string name="about_button">About</string>
    <string name="receiver_settings">Receiver Settings</string>
    <string name="title_receiver_settings">Receiver Settings</string>
    <string name="hint_ip_address">IP Address or Hostname</string>
    <string name="hint_username">Username</string>
    <string name="username_default">root</string>
    <string name="hint_password">Password</string>
    <string name="button_save_and_test">Save &amp; Test Connection</string>
    <string name="button_save">Save</string>
    <string name="buffer_time_start">Buffer time start</string>
    <string name="buffer_time_stop">Buffer time stop</string>
    <string name="toast_recording_settings_saved">Settings saved.</string>
    <string name="label_periodic_sync_interval">Periodic Sync Interval (Hours)</string>
    <string name="hint_sync_interval">Enter 0–24 (0 = Disabled)</string>
    <string name="toast_receiver_settings_saved">Settings saved.</string>
    <string name="error_ip_address_empty">IP Address Empty.</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_notify_on_schedule">Notify on Timer Schedule</string>
    <string name="label_notify_on_record_start">Notify on Recording Start</string>
    <string name="label_notify_on_sync">Notify on Successful Timer Sync</string>
    <string name="toast_settings_saved">Settings Saved</string>
    <string name="toast_intent_copied">Intent Copied</string>
    <string name="intents_header">Broadcast Intents</string>
    <string name="button_timer_sync_intent">Timer Sync Intent</string>
    <string name="timer_sync_intent_value">io.github.legandy.enigmabridge.intent.ACTION_TRIGGER_SYNC</string>
    <string name="label_appearance">Appearance</string>
    <string name="label_theme_mode">Theme Mode</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="label_accent_color">Accent Color</string>
    <string-array name="theme_options_array">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="accent_color_names_array">
        <item>Blue 200</item>
        <item>Blue 500</item>
        <item>Blue 700</item>
    </string-array>
    <string name="status_enigma_unchecked">Enigma Receiver: Untested</string>
    <string name="status_enigma_success">Enigma Receiver: Connected</string>
    <string name="status_enigma_failed">Enigma Receiver: Connection Failed</string>
    <string name="status_tvbrowser_unchecked">TV-Browser: Not Checked</string>
    <string name="status_tvbrowser_found">TV-Browser: Found</string>
    <string name="status_tvbrowser_not_found">TV-Browser: Not Installed</string>
    <string name="status_periodic_sync_enabled">Periodic Timer Sync: Enabled</string>
    <string name="status_periodic_sync_disabled">Periodic Timer Sync: Disabled</string>
    <string name="status_last_sync_value">Last Timer Sync: %1$s</string>
    <string name="status_last_sync_never">Last Timer Sync: Never</string>
    <string name="status_notifications_enabled">Notifications: Enabled</string>
    <string name="status_notifications_disabled">Notifications: Disabled</string>
    <string name="plugin_description">Schedules recordings on an Enigma2 receiver.</string>
    <string name="plugin_author">Legandy</string>
    <string name="plugin_license">Apache License, Version 2.0</string>
    <string name="context_menu_schedule_simple">Schedule Recording</string>
    <string name="context_menu_schedule_advanced">Advanced Scheduling…</string>
    <string name="context_menu_unschedule">Un-schedule Recording</string>
    <string name="context_menu_manual_unmark">Manual Unmark</string>
    <string name="error_channel_list_not_synced">Error: Channel list not synced. Please open the app and sync.</string>
    <string name="error_channel_not_found">Error: Channel \'%1$s\' not found in synced list.</string>
    <string name="error_ip_not_set">Error: IP Address not set.</string>
    <string name="scheduling_toast">Scheduling \'%1$s\'…</string>
    <string name="schedule_success">Recording Scheduled!</string>
    <string name="schedule_failed">Failed to Schedule Recording.</string>
    <string name="bouquets_found_toast">%1$d bouquets found.</string>
    <string name="error_fetch_bouquets">Failed to fetch bouquets.</string>
    <string name="error_no_bouquet_selected">No bouquet selected.</string>
    <string name="error_sref_not_found">Could not find sRef for selected bouquet.</string>
    <string name="sync_success_toast">Successfully synced %1$d channels!</string>
    <string name="error_sync_channels">Failed to sync channels from bouquet.</string>
    <string name="error_enter_ip">Please enter an IP address.</string>
    <string name="error_ip_not_configured">IP Address not configured.</string>
    <string name="error_fetch_timers">Failed to fetch timer list.</string>
    <string name="no_timers_found">No scheduled timers found.</string>
    <string name="label_scheduled_timers">Scheduled Timers</string>
    <string name="sync_selected_bouquet">Sync Channel List</string>
    <string name="error_program_data_missing">Error: Program data missing.</string>
    <string name="toast_sync_triggered_externally">Timer sync triggered externally.</string>
    <string name="toast_timers_refreshed">Timer list refreshed.</string>
    <string name="label_use_https">Use HTTPS</string>
    <string name="toast_no_browser_found">No web browser found to open link.</string>
    <string name="timer_not_found">Timer not found on receiver, unmarking locally.</string>
    <string name="notification_channel_name">EnigmaBridge Notifications</string>
    <string name="notification_channel_description">Notifications for scheduled recordings and sync status</string>
    <string name="notification_title">Recording Scheduled</string>
    <string name="notification_content">\'%1$s\' on %2$s at %3$s</string>
    <string name="permission_granted">Notification permission granted.</string>
    <string name="permission_denied">Notification permission denied. You will not receive status updates.</string>
    <string name="notification_title_recording_started">Recording Started</string>
    <string name="notification_content_recording_started">\'%1$s\' has started recording on %2$s.</string>
    <string name="notification_title_channel_sync_success">Channel Sync Successful</string>
    <string name="notification_content_channel_sync_success">Successfully synced %1$d channels.</string>
    <string name="notification_title_timer_sync_success">Timer Sync Successful</string>
    <string name="notification_content_timer_sync_success">Successfully synced %1$d timers.</string>
    <string name="notification_title_timer_sync_failed">Timer Sync Failed</string>
    <string name="notification_content_timer_sync_failed">Could not connect to receiver to sync timers.</string>
    <string name="timer_time_range_detailed">%1$s - %2$s</string>
    <string name="menu_description">Menu for timer actions</string>
    <string name="program_placeholder">Program</string>
    <string name="channel_placeholder">Channel</string>
    <string name="Zap">Zap</string>
    <string name="Refresh">Refresh</string>
    <string name="delete_timer_title">Delete Timer</string>
    <string name="delete_timer_message">Are you sure you want to delete the timer for \"%1$s\"?</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="delete_timer_success">Timer deleted successfully.</string>
    <string name="delete_timer_failed">Failed to delete timer.</string>
    <string name="title_advanced_schedule">Advanced Scheduling</string>
    <string name="title_edit_schedule">Edit Timer</string>
    <string name="label_program_title">Program Title</string>
    <string name="label_description">Description</string>
    <string name="label_service">Service</string>
    <string name="label_begin_date">Begin date</string>
    <string name="label_begin_time">Begin time</string>
    <string name="label_end_date">End date</string>
    <string name="label_end_time">End time</string>
    <string name="label_enabled">Enabled</string>
    <string name="label_record">Record</string>
    <string name="label_justplay">JustPlay</string>
    <string name="label_switch">Switch</string>
    <string name="label_after_event">After event</string>
    <string name="label_repeats_on">Repeats on:</string>
    <string name="day_mon">Monday</string>
    <string name="day_tue">Tuesday</string>
    <string name="day_wed">Wednesday</string>
    <string name="day_thu">Thursday</string>
    <string name="day_fri">Friday</string>
    <string name="day_sat">Saturday</string>
    <string name="day_sun">Sunday</string>
    <string name="toast_timer_saved">Timer saved successfully.</string>
    <string name="toast_timer_save_failed">Failed to save timer.</string>
    <string name="fab_refresh">Refresh Timers</string>
    <string name="fab_add_timer">Add Timer</string>
    <string name="label_start_time">Start:</string>
    <string name="label_repeat">Repeat</string>
    <string name="action_edit">Edit</string>
    <string name="title_about">About</string>
    <string name="creator">Creator</string>
    <string name="creator_github_link">https://github.com/Legandy</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_github_link">https://github.com/Legandy/EnigmaBridge</string>
    <string name="license">License</string>
    <string name="license_type">GPL-3.0 License</string>
    <string name="license_link">https://www.gnu.org/licenses/gpl-3.0.en.html</string>
    <string name="version">Version</string>
    <string name="app_version_placeholder">Loading…</string>
    <string name="version_unknown">Unknown</string>
    <string name="link">Link</string>
    <string name="donations">Donations</string>
    <string name="donations_description">Support the developer</string>
    <string name="donation_option_buymeacoffee">Buy Me a Coffee</string>
    <string name="donation_desc_buymeacoffee">Thank me with a one-time donation</string>
    <string name="link_buymeacoffee">https://www.buymeacoffee.com/legandy</string>
    <string name="donation_option_kofi">Kofi</string>
    <string name="donation_desc_kofi">Thank me with a one-time donation</string>
    <string name="link_kofi">https://ko-fi.com/legandy</string>
    <string name="donation_option_paypal">PayPal</string>
    <string name="donation_desc_paypal">Thank me with a one-time donation</string>
    <string name="link_paypal">https://paypal.com/legandy</string>
    <string-array name="repeat_options">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="after_event_options">
        <item>Do Nothing</item>
        <item>Go to Standby</item>
        <item>Go to Deep Standby</item>
        <item>Auto</item>
    </string-array>
</resources>