<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.settings.SettingsActivity">

        <!-- Appearance Header -->
        <TextView
            android:id="@+id/label_appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_appearance"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_appearance"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_appearance" />

        <LinearLayout
            android:id="@+id/linear_layout_appearance_pickers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_appearance">

            <!-- Theme Picker Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_theme_mode"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_theme_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_theme_mode"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Accent Color Picker Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_accent_color"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_accent_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_accent_color"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Notification Settings Header-->
        <TextView
            android:id="@+id/label_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_notifications"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_appearance_pickers" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notify_scheduled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_notify_on_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_notifications" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notify_recording_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_notify_on_record_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_notify_scheduled" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notify_sync_success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_notify_on_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_notify_recording_started" />

        <!-- Copyable Intents Header -->
        <TextView
            android:id="@+id/intents_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/intents_header"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_notify_sync_success" />

        <View
            android:id="@+id/divider_copyable_intents"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intents_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_copy_timer_sync_intent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_timer_sync_intent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_copyable_intents" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
